--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,20 @@ venv/
 .venv/
 backend/venv/
 
+# Environment / secrets
+.env
+backend/.env
+
 # Local memory / vector stores
 backend/.chroma/
 backend/agent_memory.json
+backend/agent_memory_vectors.json
 backend/go_agent/agent_memory_vectors.json
+
+# Local logs
+*.log
+backend/agent_audit.log
+backend/go_agent/agent_audit.log
 
 # OS / editor
 .DS_Store
